- Added update icon in the bottom AppBar. - Created AppointmenDetailsPage. - Integrated Update appointment function. - Fixed an issue related to the month: the month was not recorded properly because the string format was "mm" which refers as minutes, that created issues. The mm was changed to the right format which is "MM"

--- a/StartFinanceMaster/InstaRichie/Views/AppointmentPage.xaml
+++ b/StartFinanceMaster/InstaRichie/Views/AppointmentPage.xaml
@@ -79,6 +79,11 @@
             <!--  secondary commands  -->
             <controls:PageHeader.PrimaryCommands>
                 <AppBarButton Icon="Add" Label="Add Account" Click="add_aptmn_btn_click"/>
+                <AppBarButton  Label="Delete Account" Click="update_aptmn_btn_click"  >
+                    <AppBarButton.Icon>
+                        <BitmapIcon UriSource="ms-appx:///Assets/update_icon.png"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
                 <AppBarButton Icon="Delete" Label="Delete Account" Click="delete_aptmn_btn_click"/>
             </controls:PageHeader.PrimaryCommands>
         </controls:PageHeader>
