--- a/StartFinanceMaster/InstaRichie/Views/Shell.xaml
+++ b/StartFinanceMaster/InstaRichie/Views/Shell.xaml
@@ -110,6 +110,11 @@
                                Text="Appointment" />
                 </StackPanel>
             </Controls:HamburgerButtonInfo>
+            <!--  Appointment button  -->
+            <Controls:HamburgerButtonInfo Visibility="Collapsed"  ClearHistory="True" PageType="views:AppointmenDetailsPage" 
+                                          AutomationProperties.Name="Jerry"
+                                          >
+            </Controls:HamburgerButtonInfo>
         </Controls:HamburgerMenu.PrimaryButtons>
 
         <Controls:HamburgerMenu.SecondaryButtons>
