--- a/StartFinanceMaster/InstaRichie/Views/Shell.xaml
+++ b/StartFinanceMaster/InstaRichie/Views/Shell.xaml
@@ -85,8 +85,7 @@
                                Text="Accounts" />
                 </StackPanel>
             </Controls:HamburgerButtonInfo>
-
-
+            
             <!--  Wish List button  -->
             <Controls:HamburgerButtonInfo ClearHistory="True" PageType="views:WishListPage" 
                                           AutomationProperties.Name="Jerry"
@@ -96,6 +95,18 @@
                 		Symbol="Bullets" />
                     <TextBlock Margin="12,0,0,0" VerticalAlignment="Center"
                                Text="WishList" />
+                </StackPanel>
+            </Controls:HamburgerButtonInfo>
+
+            <!--  Personal Info button  -->
+            <Controls:HamburgerButtonInfo ClearHistory="True" PageType="views:PersonalInfoPage" 
+                                          AutomationProperties.Name="Jerry"
+                                          >
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Width="48" Height="48"
+                		Symbol="Admin" />
+                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center"
+                               Text="Personal Info" />
                 </StackPanel>
             </Controls:HamburgerButtonInfo>
         </Controls:HamburgerMenu.PrimaryButtons>
